2008.02.29

* Added a print statement to the generate script.
* Moved Elements.TAB, .LINE and .RawCode into document.base.
* Moved Elements.Text and .Inline into document.character.
* Updated Renderer with these changes.
* Added a paragraph test.

2008.02.28

* Added a stubbed script for the generation of test RTF docs.
* Created a place in test/sources for test RTF docs.
* Made changes to test_all so that it can be imported by other scripts.
* Made generalizations to test_all, reducing redundancy and increasing
usability/reusablity.
* Generated and checked the first reference RTF file.
* Had to move Paragraph class into new API to avoid circular imports.
* Renamed all *PS variables to *PropertySet and removed the short names.
* Added two more test reference RTF files.
* Updated section unit tests.
* Removed Paragraph from Elements.
* Added the next reference RTF file and finished up the last section test.
* Moved common test case code into utils.RTFTestCase and updated the sections
test case.
* Cleaned up imports in section test file.
* Cleaned up some whitespace in the paragraph file.
* Started on the paragraph tests.
* Did some more RTFTestCase abstraction.
* Updated the generate script.
* Finished the first para test.
* Added two more paragraph tests.

2008.02.27

* Moved examples into test dir to serve as the basis for unit tests.
* Added prototype RTF parsing code from Pecha project.
* Added TextEdit test RTF files from Mac OS X.
* Updated TODO.
* Fixed remaining whitespace issue in setup.py.
* Created exceptions file.
* Split grammar into its own file.
* Made grammar module-level variable (singleton) instead of instantiated class.
* Updated TODO.
* Renamed pyrtfng package to rtfng.
* Added test runner for doctests.
* Added test runner for all tests, and added doctest suite to the runner.
* Added a utility module.
* Added code for recursively adding tests.
* Added images to be used in tests to test/resources.
* Updated TODO.