@@ -33,3 +33,49 @@ class Inline(Text):
         self.extend(values)
 
 
+
+def TEXT(*params, **kwargs):
+    text_props = TextPropertySet()
+    text_props.SetFont(kwargs.get('font', None ))
+    text_props.SetSize(kwargs.get('size', None ))
+    text_props.SetBold(kwargs.get('bold', False))
+    text_props.SetItalic(kwargs.get('italic', False))
+    text_props.SetUnderline(kwargs.get('underline', False))
+    text_props.SetColour(kwargs.get('colour', None ))
+
+    if len(params) == 1:
+        return Text(params[0], text_props)
+
+    result = Inline(text_props)
+    apply(result.append, params)
+    return result
+
+def B(*params):
+    text_props = TextPropertySet(bold=True)
+
+    if len(params) == 1:
+        return Text(params[0], text_props)
+
+    result = Inline(text_props)
+    apply(result.append, params)
+    return result
+
+def I(*params):
+    text_props = TextPropertySet(italic=True)
+
+    if len(params) == 1:
+        return Text(params[0], text_props)
+
+    result = Inline(text_props)
+    apply(result.append, params)
+    return result
+
+def U(*params):
+    text_props = TextPropertySet(underline=True)
+
+    if len(params) == 1:
+        return Text(params[0], text_props)
+
+    result = Inline(text_props)
+    apply(result.append, params)
+    return result
