@@ -1,0 +1,19 @@
+{\rtf1\ansi\ansicpg1252\deff0\deflang3081\viewkind1
+{\colortbl ;\red0\green0\blue0;\red0\green0\blue255;\red0\green255\blue255;\red0\green255\blue0;\red255\green0\blue255;\red255\green0\blue0;\red255\green255\blue0;\red255\green255\blue255;\red0\green0\blue128;\red0\green128\blue128;\red0\green128\blue0;\red128\green0\blue128;\red128\green0\blue0;\red128\green128\blue0;\red128\green128\blue128;\red192\green192\blue192;}
+{\fonttbl{\f0\fswiss\fprq2\fcharset0{\*\panose 020b0604020202020204} Arial;}{\f1\fswiss\fprq2\fcharset0{\*\panose 020b0a04020102020204} Arial Black;}{\f2\fswiss\fprq2\fcharset0{\*\panose 020b0506020202030204} Arial Narrow;}{\f3\fmodern\fprq1\fcharset0{\*\panose 020b0609030804020204} Bitstream Vera Sans Mono;}{\f4\fswiss\fprq2\fcharset0{\*\panose 020b0603030804020204} Bitstream Vera Sans;}{\f5\froman\fprq2\fcharset0{\*\panose 02060603050605020204} Bitstream Vera Serif;}{\f6\froman\fprq2\fcharset0{\*\panose 02040602050305030304} Book Antiqua;}{\f7\froman\fprq2\fcharset0{\*\panose 02050604050505020204} Bookman Old Style;}{\f8\froman\fprq2\fcharset0{\*\panose 020a0402060406010301} Castellar{\*\falt Georgia};}{\f9\fswiss\fprq2\fcharset0{\*\panose 020b0502020202020204} Century Gothic;}{\f10\fscript\fprq2\fcharset0{\*\panose 030f0702030302020204} Comic Sans MS;}{\f11\fmodern\fprq1\fcharset0{\*\panose 02070309020205020404} Courier New;}{\f12\fswiss\fprq2\fcharset0{\*\panose 020b0603020102020204} Franklin Gothic Medium;}{\f13\froman\fprq2\fcharset0{\*\panose 02020404030301010803} Garamond;}{\f14\froman\fprq2\fcharset0{\*\panose 02040502050405020303} Georgia;}{\f15\fswiss\fprq2\fcharset0{\*\panose 020b0706040902060204} Haettenschweiler;}{\f16\fswiss\fprq2\fcharset0{\*\panose 020b0806030902050204} Impact;}{\f17\fmodern\fprq1\fcharset0{\*\panose 020b0609040504020204} Lucida Console;}{\f18\fswiss\fprq2\fcharset0{\*\panose 020b0602030504020204} Lucida Sans Unicode;}{\f19\fswiss\fprq2\fcharset0{\*\panose 020b0604020202020204} Microsoft Sans Serif;}{\f20\fscript\fprq2\fcharset0{\*\panose 03010101010201010101} Monotype Corsiva;}{\f21\froman\fprq2\fcharset0{\*\panose 02040502050505030304} Palatino Linotype;}{\f22\fscript\fprq2\fcharset0{\*\panose 03070502060502030205} Papyrus;}{\f23\froman\fprq2\fcharset0{\*\panose 010a0502050306030303} Sylfaen;}{\f24\froman\fprq2\fcharset2{\*\panose 05050102010706020507} Symbol;}{\f25\fswiss\fprq2\fcharset0{\*\panose 020b0604030504040204} Tahoma;}{\f26\froman\fprq2\fcharset0{\*\panose 02020603050405020304} Times New Roman;}{\f27\fswiss\fprq2\fcharset0{\*\panose 020b0603020202020204} Trebuchet MS;}{\f28\fswiss\fprq2\fcharset0{\*\panose 020b0604030504040204} Verdana;}}
+{\stylesheet{\s0\ql\sb60\sa60\f0\fs22\sbasedon0\snext0 Normal;}
+{\s1\ql\f0\fs22\sbasedon0\snext0 Normal Short;}
+{\s2\ql\sb240\sa60\f0\fs32\sbasedon0\snext0 Heading 1;}
+{\s3\ql\sb240\sa60\b\f0\fs24\sbasedon0\snext0 Heading 2;}
+{\s4\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 Normal Numbered;}
+{\s5\ql\sb60\sa60\fi-720\li1440\f0\fs22\sbasedon0\snext0 Normal Numbered 2;}
+{\s6\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 List 1;}
+{\s7\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 List 2;}
+{\s8\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 List 3;}}
+\paperw11907\paperh16838\margt1000\margl1200\margb1000\margr1200\sectd{\header}
+{\footer}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22 The paragraphs below demonstrate the flexibility , the following is all at the same indent level and the one after it has the first line at a different indent to the rest. The third has the first line going in the other direction and is also separated by a page break. Note that the FirstLineIndent is defined as being the difference from the LeftIndent.\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22 (Paragraph text from http://www.shakespeare-online.com/plots/1kh4ps.html.)\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\li2160 The play opens one year after the death of Richard II, and King Henry is making plans for a crusade to the Holy Land to cleanse himself of the guilt he feels over the usurpation of Richard's crown. But the crusade must be postponed when Henry learns that Welsh rebels, led by Owen Glendower, have defeated and captured Mortimer. Although the brave Henry Percy, nicknamed Hotspur, has quashed much of the uprising, there is still much trouble in Scotland. King Henry has a deep admiration for Hotspur and he longs for his own son, Prince Hal, to display some of Hotspur's noble qualities. Hal is more comfortable in a tavern than on the battlefield, and he spends his days carousing with riff-raff in London. But King Henry also has his problems with the headstrong Hotspur, who refuses to turn over his prisoners to the state as he has been so ordered. Westmoreland tells King Henry that Hotspur has many of the traits of his uncle, Thomas Percy, the Earl of Worcester, and defying authority runs in the family.\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\fi-1440\li2160 The play opens one year after the death of Richard II, and King Henry is making plans for a crusade to the Holy Land to cleanse himself of the guilt he feels over the usurpation of Richard's crown. But the crusade must be postponed when Henry learns that Welsh rebels, led by Owen Glendower, have defeated and captured Mortimer. Although the brave Henry Percy, nicknamed Hotspur, has quashed much of the uprising, there is still much trouble in Scotland. King Henry has a deep admiration for Hotspur and he longs for his own son, Prince Hal, to display some of Hotspur's noble qualities. Hal is more comfortable in a tavern than on the battlefield, and he spends his days carousing with riff-raff in London. But King Henry also has his problems with the headstrong Hotspur, who refuses to turn over his prisoners to the state as he has been so ordered. Westmoreland tells King Henry that Hotspur has many of the traits of his uncle, Thomas Percy, the Earl of Worcester, and defying authority runs in the family.\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\fi720\li720 The play opens one year after the death of Richard II, and King Henry is making plans for a crusade to the Holy Land to cleanse himself of the guilt he feels over the usurpation of Richard's crown. But the crusade must be postponed when Henry learns that Welsh rebels, led by Owen Glendower, have defeated and captured Mortimer. Although the brave Henry Percy, nicknamed Hotspur, has quashed much of the uprising, there is still much trouble in Scotland. King Henry has a deep admiration for Hotspur and he longs for his own son, Prince Hal, to display some of Hotspur's noble qualities. Hal is more comfortable in a tavern than on the battlefield, and he spends his days carousing with riff-raff in London. But King Henry also has his problems with the headstrong Hotspur, who refuses to turn over his prisoners to the state as he has been so ordered. Westmoreland tells King Henry that Hotspur has many of the traits of his uncle, Thomas Percy, the Earl of Worcester, and defying authority runs in the family.\par}}
