@@ -1,0 +1,20 @@
+{\rtf1\ansi\ansicpg1252\deff0\deflang3081\viewkind1
+{\colortbl ;\red0\green0\blue0;\red0\green0\blue255;\red0\green255\blue255;\red0\green255\blue0;\red255\green0\blue255;\red255\green0\blue0;\red255\green255\blue0;\red255\green255\blue255;\red0\green0\blue128;\red0\green128\blue128;\red0\green128\blue0;\red128\green0\blue128;\red128\green0\blue0;\red128\green128\blue0;\red128\green128\blue128;\red192\green192\blue192;}
+{\fonttbl{\f0\fswiss\fprq2\fcharset0{\*\panose 020b0604020202020204} Arial;}{\f1\fswiss\fprq2\fcharset0{\*\panose 020b0a04020102020204} Arial Black;}{\f2\fswiss\fprq2\fcharset0{\*\panose 020b0506020202030204} Arial Narrow;}{\f3\fmodern\fprq1\fcharset0{\*\panose 020b0609030804020204} Bitstream Vera Sans Mono;}{\f4\fswiss\fprq2\fcharset0{\*\panose 020b0603030804020204} Bitstream Vera Sans;}{\f5\froman\fprq2\fcharset0{\*\panose 02060603050605020204} Bitstream Vera Serif;}{\f6\froman\fprq2\fcharset0{\*\panose 02040602050305030304} Book Antiqua;}{\f7\froman\fprq2\fcharset0{\*\panose 02050604050505020204} Bookman Old Style;}{\f8\froman\fprq2\fcharset0{\*\panose 020a0402060406010301} Castellar{\*\falt Georgia};}{\f9\fswiss\fprq2\fcharset0{\*\panose 020b0502020202020204} Century Gothic;}{\f10\fscript\fprq2\fcharset0{\*\panose 030f0702030302020204} Comic Sans MS;}{\f11\fmodern\fprq1\fcharset0{\*\panose 02070309020205020404} Courier New;}{\f12\fswiss\fprq2\fcharset0{\*\panose 020b0603020102020204} Franklin Gothic Medium;}{\f13\froman\fprq2\fcharset0{\*\panose 02020404030301010803} Garamond;}{\f14\froman\fprq2\fcharset0{\*\panose 02040502050405020303} Georgia;}{\f15\fswiss\fprq2\fcharset0{\*\panose 020b0706040902060204} Haettenschweiler;}{\f16\fswiss\fprq2\fcharset0{\*\panose 020b0806030902050204} Impact;}{\f17\fmodern\fprq1\fcharset0{\*\panose 020b0609040504020204} Lucida Console;}{\f18\fswiss\fprq2\fcharset0{\*\panose 020b0602030504020204} Lucida Sans Unicode;}{\f19\fswiss\fprq2\fcharset0{\*\panose 020b0604020202020204} Microsoft Sans Serif;}{\f20\fscript\fprq2\fcharset0{\*\panose 03010101010201010101} Monotype Corsiva;}{\f21\froman\fprq2\fcharset0{\*\panose 02040502050505030304} Palatino Linotype;}{\f22\fscript\fprq2\fcharset0{\*\panose 03070502060502030205} Papyrus;}{\f23\froman\fprq2\fcharset0{\*\panose 010a0502050306030303} Sylfaen;}{\f24\froman\fprq2\fcharset2{\*\panose 05050102010706020507} Symbol;}{\f25\fswiss\fprq2\fcharset0{\*\panose 020b0604030504040204} Tahoma;}{\f26\froman\fprq2\fcharset0{\*\panose 02020603050405020304} Times New Roman;}{\f27\fswiss\fprq2\fcharset0{\*\panose 020b0603020202020204} Trebuchet MS;}{\f28\fswiss\fprq2\fcharset0{\*\panose 020b0604030504040204} Verdana;}}
+{\stylesheet{\s0\ql\sb60\sa60\f0\fs22\sbasedon0\snext0 Normal;}
+{\s1\ql\f0\fs22\sbasedon0\snext0 Normal Short;}
+{\s2\ql\sb240\sa60\f0\fs32\sbasedon0\snext0 Heading 1;}
+{\s3\ql\sb240\sa60\b\f0\fs24\sbasedon0\snext0 Heading 2;}
+{\s4\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 Normal Numbered;}
+{\s5\ql\sb60\sa60\fi-720\li1440\f0\fs22\sbasedon0\snext0 Normal Numbered 2;}
+{\s6\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 List 1;}
+{\s7\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 List 2;}
+{\s8\ql\sb60\sa60\fi-720\li720\f0\fs22\sbasedon0\snext0 List 3;}}
+\paperw11907\paperh16838\margt1000\margl1200\margb1000\margr1200\sectd{\header}
+{\footer}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22 The alignment of tabs and style can also be controlled. The following demonstrates how to use flush right tabs and the supported leaders.\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\tqr\tldot\tx9507 Before Dots\tab After Dots\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\tqr\tlhyph\tx9507 Before Hyphens\tab After Hyphens\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\tqr\tlul\tx9507 Before Underline\tab After Underline\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\tqr\tlth\tx9507 Before Thick Line\tab After Thick Line\par}
+{\pard\plain \s0\ql\sb60\sa60\f0\fs22\ql\tqr\tleq\tx9507 Before Equal Sign\tab After Equal Sign\par}}
